Configure main body

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Musix</title>
   </head>
-  <body></body>
+  <body>
+    <img class="brandIcon" src="./src/images/logo_Icon.svg" alt="Musix Icon" />
+    <img class="brandName" src="./src/images/brand_name.svg" alt="Musix Icon" />
+    <img class="copywrite" src="./src/images/copywrite.svg" alt="Musix Icon" />
+  </body>
 </html>
