Configure player layout

--- a/index.html
+++ b/index.html
@@ -9,5 +9,34 @@
     <img class="brandIcon" src="./src/images/logo_Icon.svg" alt="Musix Icon" />
     <img class="brandName" src="./src/images/brand_name.svg" alt="Musix Icon" />
     <img class="copywrite" src="./src/images/copywrite.svg" alt="Musix Icon" />
+
+    <div class="player">
+      <div class="player__nav">
+        <img src="./src/images/logo.svg" alt="Musix" class="player__nav-logo" />
+      </div>
+      <div class="player__info">
+        <div class="player__info-display">
+          <div class="player__info-display-equalizer"></div>
+          <div class="player__info-display-thumbnail"></div>
+          <div class="player__info-display-equalizer"></div>
+        </div>
+        <div class="player__info-description">
+          <div class="player__info-description-song"></div>
+          <div class="player__info-description-singer"></div>
+        </div>
+      </div>
+      <div class="player__controller">
+        <div class="player__controller-time">
+          <div class="player__controller-time-played"></div>
+          <div class="player__controller-time-end"></div>
+          <div class="player__controller-time-range"></div>
+        </div>
+        <div class="player__controller-buttons">
+          <div class="player__controller-buttons-btn--small"></div>
+          <div class="player__controller-buttons-btn--large"></div>
+          <div class="player__controller-buttons-btn--small"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
