Configure player info

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
       </div>
       <div class="player__info">
         <div class="player__info-display">
-          <div class="player__info-display-equalizer"></div>
-          <div class="player__info-display-thumbnail"></div>
-          <div class="player__info-display-equalizer"></div>
+          <div class="player__info-display-equalizer">
+            <img src="./src/images/level.svg" alt="" />
+          </div>
+          <img
+            src="./src/images/shak.png"
+            alt="Shakira"
+            class="player__info-display-thumbnail"
+          />
+          <div class="player__info-display-equalizer">
+            <img src="./src/images/level (1).svg" alt="" />
+          </div>
         </div>
         <div class="player__info-description">
           <div class="player__info-description-song"></div>
