Use button tag instead of div

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
           <div class="player__controller-time-progress"></div>
         </div>
         <div class="player__controller-buttons">
-          <div
+          <button
             class="player__controller-buttons-btn player__controller-buttons-btn--small"
           >
             <img src="./src/images/backward-solid.svg" alt="backward-button" />
-          </div>
-          <div
+          </button>
+          <button
             class="player__controller-buttons-btn player__controller-buttons-btn--large"
           >
             <img src="./src/images/play-solid.svg" alt="play-button" />
-          </div>
-          <div
+          </button>
+          <button
             class="player__controller-buttons-btn player__controller-buttons-btn--small"
           >
             <img src="./src/images/forward-solid.svg" alt="forward-button" />
-          </div>
+          </button>
         </div>
       </div>
     </div>
