Update build for deployment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             class="player__info-display-thumbnail"
           />
           <div class="player__info-display-equalizer">
-            <img src="./src/images/level (1).svg" alt="" />
+            <img src="./src/images/level2.svg" alt="" />
           </div>
         </div>
         <div class="player__info-description">
