Add equalizers and styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
       <div class="player__info">
         <div class="player__info-display">
           <div class="player__info-display-equalizer">
-            <img src="./src/images/level.svg" alt="" />
+            <div class="player__info-display-equalizer-bar"></div>
+            <div class="player__info-display-equalizer-bar"></div>
+            <div class="player__info-display-equalizer-bar"></div>
+            <div class="player__info-display-equalizer-bar"></div>
+            <div class="player__info-display-equalizer-bar"></div>
+            <div class="player__info-display-equalizer-bar"></div>
+            <div class="player__info-display-equalizer-bar"></div>
+            <div class="player__info-display-equalizer-bar"></div>
+            <div class="player__info-display-equalizer-bar"></div>
           </div>
           <img
             src="./src/images/shak.png"
@@ -25,7 +33,33 @@
             class="player__info-display-thumbnail"
           />
           <div class="player__info-display-equalizer">
-            <img src="./src/images/level2.svg" alt="" />
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
+            <div
+              class="player__info-display-equalizer-bar player__info-display-equalizer-bar--inverse"
+            ></div>
           </div>
         </div>
         <div class="player__info-description">
