Replace button icons with iconfont

--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
           <button
             class="player__controller-buttons-btn player__controller-buttons-btn--small"
           >
-            <img src="./src/images/backward-solid.svg" alt="backward-button" />
+            <i class="icon-backward"></i>
           </button>
           <button
             class="player__controller-buttons-btn player__controller-buttons-btn--large"
           >
-            <img src="./src/images/play-solid.svg" alt="play-button" />
+            <i class="icon-play"></i>
           </button>
           <button
             class="player__controller-buttons-btn player__controller-buttons-btn--small"
           >
-            <img src="./src/images/forward-solid.svg" alt="forward-button" />
+            <i class="icon-forward"></i>
           </button>
         </div>
       </div>
