Add controller functions for player

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <i class="icon-backward"></i>
           </button>
           <button
+            id="js-play-pause-btn"
             class="player__controller-buttons-btn player__controller-buttons-btn--large"
           >
             <i class="icon-play"></i>
