Add song play and pause feature

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
           </button>
         </div>
       </div>
+
+      <audio
+        id="js-musix-player"
+        src="./src/songs/shakira whenever wherever.mp3"
+      ></audio>
     </div>
   </body>
 </html>
